--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ bleach==1.5.0
 bokeh==0.12.16
 boto==2.48.0
 Bottleneck==1.2.1
-certifi==2018.4.16
+certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
@@ -27,11 +27,11 @@ cloudpickle==0.5.3
 clyent==1.2.2
 colorama==0.3.9
 comtypes==1.1.4
-conda==4.5.11
+conda==4.5.12
 conda-build==3.10.5
 conda-verify==2.0.0
 contextlib2==0.5.5
-cryptography==2.2.2
+cryptography==2.4.2
 cycler==0.10.0
 Cython==0.28.2
 cytoolz==0.9.0.1
@@ -104,7 +104,7 @@ networkx==2.1
 ninja==1.8.2.post2
 nltk==3.3
 nose==1.3.7
-notebook==5.5.0
+notebook==5.7.4
 numba==0.38.0
 numexpr==2.6.5
 numpy==1.15.4
@@ -127,6 +127,7 @@ pkginfo==1.4.2
 plotly==3.4.2
 pluggy==0.6.0
 ply==3.11
+prometheus-client==0.5.0
 prompt-toolkit==1.0.15
 protobuf==3.6.1
 psutil==5.4.5
@@ -135,7 +136,6 @@ pybind11==2.2.4
 pycodestyle==2.4.0
 pycosat==0.6.3
 pycparser==2.18
-pycrypto==2.6.1
 pycurl==7.43.0.1
 pydot==1.2.4
 pyflakes==1.6.0
@@ -161,9 +161,9 @@ pyzmq==17.0.0
 QtAwesome==0.4.4
 qtconsole==4.3.1
 QtPy==1.4.1
-requests==2.18.4
+requests==2.21.0
 retrying==1.3.3
-rope==0.10.7
+rope==0.11.0
 ruamel-yaml==0.15.35
 scikit-image==0.13.1
 scikit-learn==0.19.1
@@ -197,7 +197,7 @@ tornado==5.0.2
 traitlets==4.3.2
 typing==3.6.4
 unicodecsv==0.14.1
-urllib3==1.22
+urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
